# minecraft-server-telegram-bot

./: .gitignore  Cargo.toml  README.md  bot-config.json
locales/de-DE/: main.ftl
locales/en-UK/: main.ftl
src/: main.rs
systemd-service/: minecraft-telegram-bot.service
