[package]
name = "minecraft-server-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.10" }
tokio = { version = "1.17.0" , features = ["full"]}
regex = "1.5.4"
async-process = "1.3.0"
futures-lite = "1.12.0"
serde = "1.0.136"
serde_json = "1.0.79"
fluent-templates = "0.6.1"
